# qgm

./: .gitignore  LICENSE  README.md  setup.cfg  setup.py
qgm/: __init__.py  data.py  deconvolution.py  evaluation.py  filter.py  fitting.py  function.py  image.py  parameter.py  search_atoms.py  simulation.py
qgm/function_fast/: function_1d.py  function_2d.py
