[metadata]
name = qgm
version = attr:qgm.__version__
description-file = README.md
author = Ryuta Yamamoto
author_email = 
description = QGM, Quantum Gas Microscopy, is a package for coldatom experiment with single-site resolved imaging.
long_description= file:README.md
url = 
licence = MIT License
classifiers = 
    Development Status :: 1 - Planning
    Programming Language :: Python :: 3.6
    Operating System :: OS Independent

    python_requires='>=3.6',

packages=setuptools.find_packages(),

[options]
zip_safe = False
packages = find:
install_requires = 
    numpy
    scipy
    matplotlib
    pillow
    pandas
    tqdm
    joblib
    numba
    astropy
    photutils